Add openSudoLectureFile to ExampleCommands.all and add prompt

--- a/CSAuthSample Example App/Common/en.lproj/Prompts.strings
+++ b/CSAuthSample Example App/Common/en.lproj/Prompts.strings
@@ -7,3 +7,4 @@
 */
 
 "SayHello" = "CSAuthSample Example App would like to say hello.";
+"OpenSudoLectureFile" = "CSAuthSample Example App would like to read a secret file.";
