--- a/CSAuthSample Example App/Common/en.lproj/Prompts.strings
+++ b/CSAuthSample Example App/Common/en.lproj/Prompts.strings
@@ -1,10 +1,3 @@
-/* 
-  Prompts.strings
-  CSAuthSample Example App
-
-  Created by Charles Srstka on 4/5/20.
-  Copyright © 2020-2021 Charles Srstka. All rights reserved.
-*/
-
 "SayHello" = "CSAuthSample Example App would like to say hello.";
 "OpenSudoLectureFile" = "CSAuthSample Example App would like to read a secret file.";
+"UnregsiterHelperTool" = "CSAuthSample Example App would like to unregister its helper tool with the system.";
